--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "6267a555-93ac-4556-88c5-b0d37bab4726"
   },
   "newProjectRoot": "projects",
   "projects": {
